Use platform threads for CPU-bound parse + single query worker
Both thread uses were virtual threads carried from the M0 spike, but neither
exploits virtual threads' purpose (cheap blocking at high concurrency):
- Indexer.parseAll is CPU-bound, so parallelism is core-capped regardless of
  thread model. Switch to a fixed pool sized to availableProcessors() — same
  throughput, but parallelism is now bounded/intentional and in-flight ASTs
  are capped.
- QueryService runs one query at a time (single-writer); its worker is a single
  thread for interruptible deadline isolation, not concurrency. Platform thread
  expresses that honestly.

Behavior- and performance-neutral: spring-framework index (9237 files / 1.505M
LOC) unchanged at ~50s and same RSS band; full suite green.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>